<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MainActivity">

        <LinearLayout
            android:id="@+id/departure_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/departure" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/select_airport"
                android:autofillHints="0"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/destination_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/departure_view"
            app:layout_constraintStart_toStartOf="@id/departure_view"
            app:layout_constraintTop_toBottomOf="@id/departure_view"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/select_airport"
                android:autofillHints="0"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/adults_section"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/teens_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/destination_view">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adults" />

            <Spinner
                android:id="@+id/adultsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teens_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/children_view"
            app:layout_constraintStart_toEndOf="@+id/adults_section"
            app:layout_constraintTop_toTopOf="@+id/adults_section">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teens" />

            <Spinner
                android:id="@+id/teensSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/children_view"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/teens_view"
            app:layout_constraintTop_toTopOf="@+id/teens_view">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children" />

            <Spinner
                android:id="@+id/childrenSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/departure_date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teens_view"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_date" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                tools:text="10.04.2022"
                android:autofillHints="date"
                android:inputType="date" />
        </LinearLayout>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_price_range"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/departure_date_view" />

        <com.google.android.material.slider.Slider
            android:id="@+id/priceSeekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:value="150"
            android:valueFrom="150"
            android:valueTo="1000"
            app:layout_constraintEnd_toEndOf="@id/departure_view"
            app:layout_constraintStart_toStartOf="@id/departure_view"
            app:layout_constraintTop_toBottomOf="@+id/price_text" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceSeekbar"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
